syntax = "proto3";

package greet;

service GreetService {
    // unary API
    rpc Greet (GreetRequest) returns (GreetResponse) {};
    // streaming API
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse) {};
}

message Greeting {
    string firstName = 1;
    string lastName = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}
